--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
-# System files
-.DS_Store
-Thumbs.db
-
-# Node modules
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Build artifacts
+# Build outputs
+build/
 *.o
 *.a
-build/
 
-# Editor files
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# Python
-__pycache__/
-*.pyc
+# OS files
+.DS_Store
+Thumbs.db
 
-# Logs
-*.log 
+# Local development
+.env
+.env.local
+
+# Temporary files
+*.tmp
+*.temp
+
+# GitHub Pages (auto-generated)
+_site/
+
+# Emscripten build artifacts
+*.js.mem
+*.wast
+
+# Backup files
+*.bak
+*.backup 
